--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -1,14 +1,12 @@
-# How to author Executors: https://circleci.com/docs/2.0/reusing-config/#authoring-reusable-executors
 description: >
-  This is a sample executor using Docker and Node.
-  # What is this executor?
-  # Descriptions should be short, simple, and clear.
+  This is the default executor using Docker and Alpine linux.
+
 docker:
-  - image: 'circleci/node:<<parameters.tag>>'
+  - image: 'alpine:<<parameters.tag>>'
 parameters:
   tag:
     default: latest
     description: >
       Pick a specific circleci/node image variant:
-      https://hub.docker.com/r/circleci/node/tags
+      https://hub.docker.com/_/alpine?tab=tags
     type: string
