--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,13 @@ workflows:
   lint-pack_validate_publish-dev:
     jobs:
       # lint your destructured orb YAML files
-      - orb-tools/lint
+      #- orb-tools/lint
 
       # pack your orb YAML files to a single orb.yml
       # validate the orb.yml file to ensure it is well-formed
-      - orb-tools/pack:
-          requires:
-            - orb-tools/lint
+      - orb-tools/pack
+          #requires:
+            #- orb-tools/lint
 
       # release dev version of orb, for testing & possible publishing
       # requires a CircleCI API token to be stored as CIRCLE_TOKEN (default)
