--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 # release must exist; you'll need to publish manually at least once)
 # you can use scripts/publish-alpha.sh to publish a @dev:alpha release
 orbs:
-  prebuild-orb: netgaintechnology/prebuild-orb@dev:alpha
+  prebuild-orb: netgaintechnology/prebuild-orb@dev:0.0.1
   orb-tools: circleci/orb-tools@volatile
 
 workflows:
@@ -12,13 +12,13 @@ workflows:
   lint-pack_validate_publish-dev:
     jobs:
       # lint your destructured orb YAML files
-      #- orb-tools/lint
+      - orb-tools/lint
 
       # pack your orb YAML files to a single orb.yml
       # validate the orb.yml file to ensure it is well-formed
-      - orb-tools/pack
-          #requires:
-            #- orb-tools/lint
+      - orb-tools/pack:
+          requires:
+            - orb-tools/lint
 
       # release dev version of orb, for testing & possible publishing
       # requires a CircleCI API token to be stored as CIRCLE_TOKEN (default)
