--- a/src/executors/chef.yml
+++ b/src/executors/chef.yml
@@ -1,7 +1,7 @@
 description: >
   Docker image for chef-workstation
 
-resource_class: small
+resource_class: medium
 
 docker:
   - image: chef/chefworkstation:current
