--- a/src/executors/golang.yml
+++ b/src/executors/golang.yml
@@ -1,7 +1,7 @@
 description: >
   Official Docker image for golang on alpine linux
 
-resource_class: small
+resource_class: medium
 
 docker:
   - image: golang:alpine
