--- a/src/executors/markdown.yml
+++ b/src/executors/markdown.yml
@@ -1,7 +1,7 @@
 description: >
   Official Docker image for ruby on alpine linux
 
-resource_class: small
+resource_class: medium
 
 docker:
   - image: ruby:alpine
