--- a/src/executors/powershell.yml
+++ b/src/executors/powershell.yml
@@ -1,7 +1,7 @@
 description: >
   Docker image for microsoft powershell
 
-resource_class: small
+resource_class: medium
 
 docker:
   - image: mcr.microsoft.com/powershell
