--- a/src/executors/terraform.yml
+++ b/src/executors/terraform.yml
@@ -1,7 +1,7 @@
 description: >
   Docker image for terraform on alpine linux
 
-resource_class: small
+resource_class: medium
 
 docker:
   - image: hashicorp/terraform
