fix for ansible-lint install
Signed-off-by: Corey Hemminger <hemminger@hotmail.com>

--- a/src/jobs/ansible_lint.yml
+++ b/src/jobs/ansible_lint.yml
@@ -13,5 +13,5 @@ parameters:
 
 steps:
   - update_alpine_and_checkout
-  - run: pip install --no-cache-dir ansible-lint
+  - run: apk add --no-cache ansible-lint
   - run: ansible-lint <<parameters.lint-dir>>/*.(yaml|yml)$
