--- a/src/jobs/ansible_lint.yml
+++ b/src/jobs/ansible_lint.yml
@@ -14,4 +14,4 @@ parameters:
 steps:
   - update_alpine_and_checkout
   - run: apk add --no-cache ansible-lint
-  - run: ansible-lint <<parameters.lint-dir>>/*.(yaml|yml)$
+  - run: ansible-lint <<parameters.lint-dir>>/**/*.yml
