--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ version: 2.1
 # release must exist; you'll need to publish manually at least once)
 # you can use scripts/publish-alpha.sh to publish a @dev:alpha release
 orbs:
+  cli: circleci/circleci-cli@volatile
   prebuild-orb: netgaintechnology/prebuild-orb@volatile
   orb-tools: circleci/orb-tools@volatile
   prebuild-orb-alpha: netgaintechnology/prebuild-orb@dev:alpha
@@ -25,6 +26,7 @@ jobs:
 
     steps:
       - checkout
+      - cli/install
       - orb-tools/install-bats
       - orb-tools/pack
       - orb-tools/validate
