fix chef linting command
Signed-off-by: Corey Hemminger <hemminger@hotmail.com>

--- a/src/jobs/chef_lint.yml
+++ b/src/jobs/chef_lint.yml
@@ -13,4 +13,4 @@ parameters:
 
 steps:
   - checkout
-  - run: cookstyle -P <<parameters.lint-dir>>
+  - run: cookstyle -P --fail-level A <<parameters.lint-dir>>
