--- a/src/commands/update_alpine_and_checkout.yml
+++ b/src/commands/update_alpine_and_checkout.yml
@@ -1,4 +1,4 @@
-description: >
+description: |
   Run Alpine updates to ensure we are running latest versions of software and checkout git repo locally.
 
 parameters:
