--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -1,4 +1,4 @@
-description: >
+description: |
   This is the default executor using Docker and Alpine linux.
 
 docker:
@@ -7,7 +7,7 @@ docker:
 parameters:
   tag:
     default: latest
-    description: >
+    description: |
       Pick a specific alpine image variant:
       https://hub.docker.com/_/alpine?tab=tags
     type: string
