--- a/src/jobs/yaml_lint.yml
+++ b/src/jobs/yaml_lint.yml
@@ -1,4 +1,4 @@
-description: >
+description: |
   yaml linting
 
 executor: yaml
@@ -7,7 +7,7 @@ parameters:
   lint-dir:
     type: string
     default: .
-    description: >
+    description: |
       Directory within to lint all yaml files,
       defaults to the working directory (.)
 
