added missing escape
Signed-off-by: Corey Hemminger <hemminger@hotmail.com>

--- a/src/jobs/terraform_lint.yml
+++ b/src/jobs/terraform_lint.yml
@@ -14,7 +14,7 @@ parameters:
 steps:
   - update_alpine_and_checkout
   - run: |
-    cat <<~EOF > ~/.terraformrc
+    cat \<<~EOF > ~/.terraformrc
       # Terraform CLI config
       credentials "app.terraform.io" {
         token = "$TFIO_TOKEN"
