conditionals for github env vars, and added README and CHANGELOG updates

--- a/src/jobs/terraform_lint.yml
+++ b/src/jobs/terraform_lint.yml
@@ -10,6 +10,7 @@ parameters:
     description: |
       Directory within to lint all terraform files,
       defaults to the working directory (.)
+
   tf-workspace:
     type: string
     default: dev
@@ -24,6 +25,27 @@ steps:
         credentials "app.terraform.io" {
           token = "$TFIO_TOKEN"
         }
+
+# Add Github creds for private repo use, conditional on env vars being present
+  - when:
+      condition: $GITHUB_USER
+      steps:
+        - run:
+            name: Set Github User
+            command: |
+              echo "https://$GITHUB_USER:$GITHUB_TOKEN@github.com" > ~/.git-credentials
+
+  - when:
+      condition: $GITHUB_USER
+      steps:
+        - run:
+            name: Set Github Cred Helper
+            command: |
+              echo "[user]"  > ~/.gitconfig
+              echo "  name = $GITHUB_USER" >> ~/.gitconfig
+              echo "[credential]" >> ~/.gitconfig
+              echo "  helper = store" >> ~/.gitconfig
+
   - run: terraform workspace new <<parameters.tf-workspace>>
   - run: terraform init -upgrade <<parameters.lint-dir>>
   - run: terraform validate <<parameters.lint-dir>>
