--- a/src/jobs/golang_lint.yml
+++ b/src/jobs/golang_lint.yml
@@ -14,3 +14,4 @@ parameters:
 steps:
   - update_alpine_and_checkout
   - run: golangci-lint run <<parameters.lint-dir>>/...
+  - run: go fmt -l <<parameters.lint-dir>>/...
