fixed syntax error on gofmt

--- a/src/jobs/golang_lint.yml
+++ b/src/jobs/golang_lint.yml
@@ -26,6 +26,6 @@ steps:
   - update_alpine_and_checkout
   - run: golangci-lint run <<parameters.cmd-dir>>/...
   - run: golangci-lint run <<parameters.pkg-dir>>/...
-  - run: gofmt -l <<parameters.cmd-dir>>/...
-  - run: gofmt -l <<parameters.pkg-dir>>/...
+  - run: gofmt -l <<parameters.cmd-dir>>/*.go
+  - run: gofmt -l <<parameters.pkg-dir>>/*.go
   - run: go test <<parameters.test-dir>>/...
