tests fix for dirs

--- a/src/jobs/golang_lint.yml
+++ b/src/jobs/golang_lint.yml
@@ -26,4 +26,4 @@ steps:
   - update_alpine_and_checkout
   - run: golangci-lint run <<parameters.cmd-dir>>/...
   - run: golangci-lint run <<parameters.pkg-dir>>/...
-  - run: go test <<parameters.test-dir>>/...
+  - run: cd <<parameters.test-dir>>; go test ./...
