--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,8 +61,11 @@ workflows:
           filters:
             branches:
               only: master
-      - orb-tools/dev-promote-prod:
+      - orb-tools/dev-promote-prod-from-commit-subject:
           orb-name: netgaintechnology/prebuild-orb
+          add-pr-comment: false
+          publish-version-tag: true
+          fail-if-semver-not-indicated: false
           ssh-fingerprints: 66:04:99:1b:8e:51:e9:16:64:5f:f3:77:99:67:d6:66
           requires:
             - orb-tools/increment
